Yacc/y.output
   0  $accept : START $end

   1  START : MULTISTART
   2        | START MULTISTART
   3        | START error
   4        |

   5  MULTISTART : "PASS"
   6             | DECLARACION
   7             | IMPORT
   8             | DEFF
   9             | PRINT
  10             | WHILEE
  11             | FO
  12             | DERAGEX
  13             | IFF
  14             | SALTO
  15             | MULTISTART MULTISTART
  16             |

  17  NEWNUMBER : OPESTA NUMBER
  18            | NUMBER

  19  OPESTA : MAS
  20         | MENOS

  21  NUMBER : INT
  22         | LONG
  23         | IMG
  24         | DEC

  25  DECLARACION : VAR DECLA DERANGE END

  26  DECLA : ',' VAR DECLA DERANGE ','
  27        | OPASS

  28  DERANGE : EXPRESSION
  29          | RANGE

  30  DERAGEX : EXPRESSION END
  31          | RANGE END

  32  EXPRESSION : STR
  33             | LIST
  34             | CALLSITO
  35             | MATRIX
  36             | MATRIXCALL

  37  LISTCALL : VAR '[' CALLSITO ']'

  38  CALLSITO : NUMBEROP
  39           | LISTCALL
  40           | FUNCTION

  41  MATRIXCALL : VAR '[' CALLSITO ']' '[' CALLSITO ']'

  42  LIST : '[' DERANGE LI ']'

  43  LI : ',' DERANGE LI
  44     |

  45  MATRIX : LIST LIST

  46  NUMBEROP : NUMBEROP OPERATION NUMBEROP
  47           | "NOT" NUMBEROP
  48           | NEWNUMBER
  49           | VAR
  50           | "TRUE"
  51           | "FALSE"
  52           | '(' NUMBEROP ')'

  53  OPERATION : OPAL
  54            | OPESTA
  55            | MULT
  56            | COMP
  57            | OPBOL

  58  OPBOL : "IS"
  59        | "AND"
  60        | "OR"

  61  FUNCTION : VAR '(' DERANGE FU ')'

  62  FU : ',' DERANGE FU
  63     |

  64  IMPORT : "IMPORT" VAR END

  65  RANGE : "RANGE" '(' RANG ')'

  66  RANG : EXPRESSION
  67       | EXPRESSION ',' EXPRESSION

  68  IFF : "IF" DERANGE ':' PLUSTART ELIF ELSE

  69  ELIF : "ELIF" DERANGE ':' PLUSTART ELIF
  70       |

  71  ELSE : "ELSE" ':' PLUSTART
  72       |

  73  FO : "FOR" VAR "IN" FORIMP ':' PLUSTART

  74  FORIMP : VAR
  75         | RANGE
  76         | STR
  77         | LIST
  78         | LISTCALL

  79  WHILEE : "WHILE" DERANGE ':' PLUSTART

  80  PLUSTART : MULTISTART
  81           | "BREAK"
  82           | "CONTINUE"

  83  PRINT : "PRINT" '(' DERANGE CICLIKRANGE ')' END

  84  CICLIKRANGE : ',' DERANGE CICLIKRANGE
  85              |

  86  DEFF : "DEF" FUNCTION ':' MULTISTART RETU

  87  RETU : "RETURN" END
  88       |

  89  END : ';'
  90      |

0: reduce/reduce conflict (reduce 4, reduce 16) on $end
0: reduce/reduce conflict (reduce 4, reduce 16) on error
0: shift/reduce conflict (shift 1, reduce 4) on STR
0: shift/reduce conflict (shift 1, reduce 16) on STR
0: shift/reduce conflict (shift 2, reduce 4) on INT
0: shift/reduce conflict (shift 2, reduce 16) on INT
0: shift/reduce conflict (shift 3, reduce 4) on DEC
0: shift/reduce conflict (shift 3, reduce 16) on DEC
0: shift/reduce conflict (shift 4, reduce 4) on LONG
0: shift/reduce conflict (shift 4, reduce 16) on LONG
0: shift/reduce conflict (shift 5, reduce 4) on IMG
0: shift/reduce conflict (shift 5, reduce 16) on IMG
0: shift/reduce conflict (shift 6, reduce 4) on VAR
0: shift/reduce conflict (shift 6, reduce 16) on VAR
0: shift/reduce conflict (shift 7, reduce 4) on SALTO
0: shift/reduce conflict (shift 7, reduce 16) on SALTO
0: shift/reduce conflict (shift 8, reduce 4) on MENOS
0: shift/reduce conflict (shift 8, reduce 16) on MENOS
0: shift/reduce conflict (shift 9, reduce 4) on MAS
0: shift/reduce conflict (shift 9, reduce 16) on MAS
0: shift/reduce conflict (shift 10, reduce 4) on "PASS"
0: shift/reduce conflict (shift 10, reduce 16) on "PASS"
0: shift/reduce conflict (shift 11, reduce 4) on '['
0: shift/reduce conflict (shift 11, reduce 16) on '['
0: shift/reduce conflict (shift 12, reduce 4) on "NOT"
0: shift/reduce conflict (shift 12, reduce 16) on "NOT"
0: shift/reduce conflict (shift 13, reduce 4) on "TRUE"
0: shift/reduce conflict (shift 13, reduce 16) on "TRUE"
0: shift/reduce conflict (shift 14, reduce 4) on "FALSE"
0: shift/reduce conflict (shift 14, reduce 16) on "FALSE"
0: shift/reduce conflict (shift 15, reduce 4) on '('
0: shift/reduce conflict (shift 15, reduce 16) on '('
0: shift/reduce conflict (shift 16, reduce 4) on "IMPORT"
0: shift/reduce conflict (shift 16, reduce 16) on "IMPORT"
0: shift/reduce conflict (shift 17, reduce 4) on "RANGE"
0: shift/reduce conflict (shift 17, reduce 16) on "RANGE"
0: shift/reduce conflict (shift 18, reduce 4) on "IF"
0: shift/reduce conflict (shift 18, reduce 16) on "IF"
0: shift/reduce conflict (shift 19, reduce 4) on "FOR"
0: shift/reduce conflict (shift 19, reduce 16) on "FOR"
0: shift/reduce conflict (shift 20, reduce 4) on "WHILE"
0: shift/reduce conflict (shift 20, reduce 16) on "WHILE"
0: shift/reduce conflict (shift 21, reduce 4) on "PRINT"
0: shift/reduce conflict (shift 21, reduce 16) on "PRINT"
0: shift/reduce conflict (shift 22, reduce 4) on "DEF"
0: shift/reduce conflict (shift 22, reduce 16) on "DEF"
state 0
	$accept : . START $end  (0)
	START : .  (4)
	MULTISTART : .  (16)

	STR  shift 1
	INT  shift 2
	DEC  shift 3
	LONG  shift 4
	IMG  shift 5
	VAR  shift 6
	SALTO  shift 7
	MENOS  shift 8
	MAS  shift 9
	"PASS"  shift 10
	'['  shift 11
	"NOT"  shift 12
	"TRUE"  shift 13
	"FALSE"  shift 14
	'('  shift 15
	"IMPORT"  shift 16
	"RANGE"  shift 17
	"IF"  shift 18
	"FOR"  shift 19
	"WHILE"  shift 20
	"PRINT"  shift 21
	"DEF"  shift 22
	$end  reduce 4
	error  reduce 4

	START  goto 23
	MULTISTART  goto 24
	DECLARACION  goto 25
	IMPORT  goto 26
	DEFF  goto 27
	PRINT  goto 28
	WHILEE  goto 29
	FO  goto 30
	DERAGEX  goto 31
	IFF  goto 32
	NEWNUMBER  goto 33
	OPESTA  goto 34
	NUMBER  goto 35
	EXPRESSION  goto 36
	RANGE  goto 37
	LIST  goto 38
	CALLSITO  goto 39
	MATRIX  goto 40
	MATRIXCALL  goto 41
	LISTCALL  goto 42
	NUMBEROP  goto 43
	FUNCTION  goto 44


state 1
	EXPRESSION : STR .  (32)

	.  reduce 32


state 2
	NUMBER : INT .  (21)

	.  reduce 21


state 3
	NUMBER : DEC .  (24)

	.  reduce 24


state 4
	NUMBER : LONG .  (22)

	.  reduce 22


state 5
	NUMBER : IMG .  (23)

	.  reduce 23


6: shift/reduce conflict (shift 47, reduce 49) on '['
6: shift/reduce conflict (shift 48, reduce 49) on '('
state 6
	DECLARACION : VAR . DECLA DERANGE END  (25)
	LISTCALL : VAR . '[' CALLSITO ']'  (37)
	MATRIXCALL : VAR . '[' CALLSITO ']' '[' CALLSITO ']'  (41)
	NUMBEROP : VAR .  (49)
	FUNCTION : VAR . '(' DERANGE FU ')'  (61)

	OPASS  shift 45
	','  shift 46
	'['  shift 47
	'('  shift 48
	$end  reduce 49
	error  reduce 49
	OPAL  reduce 49
	COMP  reduce 49
	STR  reduce 49
	INT  reduce 49
	DEC  reduce 49
	LONG  reduce 49
	IMG  reduce 49
	VAR  reduce 49
	SALTO  reduce 49
	MULT  reduce 49
	MENOS  reduce 49
	MAS  reduce 49
	"PASS"  reduce 49
	"NOT"  reduce 49
	"TRUE"  reduce 49
	"FALSE"  reduce 49
	"IS"  reduce 49
	"AND"  reduce 49
	"OR"  reduce 49
	"IMPORT"  reduce 49
	"RANGE"  reduce 49
	"IF"  reduce 49
	"ELIF"  reduce 49
	"ELSE"  reduce 49
	"FOR"  reduce 49
	"WHILE"  reduce 49
	"PRINT"  reduce 49
	"DEF"  reduce 49
	"RETURN"  reduce 49
	';'  reduce 49

	DECLA  goto 49


state 7
	MULTISTART : SALTO .  (14)

	.  reduce 14


state 8
	OPESTA : MENOS .  (20)

	.  reduce 20


state 9
	OPESTA : MAS .  (19)

	.  reduce 19


state 10
	MULTISTART : "PASS" .  (5)

	.  reduce 5


state 11
	LIST : '[' . DERANGE LI ']'  (42)

	STR  shift 1
	INT  shift 2
	DEC  shift 3
	LONG  shift 4
	IMG  shift 5
	VAR  shift 50
	MENOS  shift 8
	MAS  shift 9
	'['  shift 11
	"NOT"  shift 12
	"TRUE"  shift 13
	"FALSE"  shift 14
	'('  shift 15
	"RANGE"  shift 17
	.  error

	NEWNUMBER  goto 33
	OPESTA  goto 34
	NUMBER  goto 35
	DERANGE  goto 51
	EXPRESSION  goto 52
	RANGE  goto 53
	LIST  goto 38
	CALLSITO  goto 39
	MATRIX  goto 40
	MATRIXCALL  goto 41
	LISTCALL  goto 42
	NUMBEROP  goto 43
	FUNCTION  goto 44


state 12
	NUMBEROP : "NOT" . NUMBEROP  (47)

	INT  shift 2
	DEC  shift 3
	LONG  shift 4
	IMG  shift 5
	VAR  shift 54
	MENOS  shift 8
	MAS  shift 9
	"NOT"  shift 12
	"TRUE"  shift 13
	"FALSE"  shift 14
	'('  shift 15
	.  error

	NEWNUMBER  goto 33
	OPESTA  goto 34
	NUMBER  goto 35
	NUMBEROP  goto 55


state 13
	NUMBEROP : "TRUE" .  (50)

	.  reduce 50


state 14
	NUMBEROP : "FALSE" .  (51)

	.  reduce 51


state 15
	NUMBEROP : '(' . NUMBEROP ')'  (52)

	INT  shift 2
	DEC  shift 3
	LONG  shift 4
	IMG  shift 5
	VAR  shift 54
	MENOS  shift 8
	MAS  shift 9
	"NOT"  shift 12
	"TRUE"  shift 13
	"FALSE"  shift 14
	'('  shift 15
	.  error

	NEWNUMBER  goto 33
	OPESTA  goto 34
	NUMBER  goto 35
	NUMBEROP  goto 56


state 16
	IMPORT : "IMPORT" . VAR END  (64)

	VAR  shift 57
	.  error


state 17
	RANGE : "RANGE" . '(' RANG ')'  (65)

	'('  shift 58
	.  error


state 18
	IFF : "IF" . DERANGE ':' PLUSTART ELIF ELSE  (68)

	STR  shift 1
	INT  shift 2
	DEC  shift 3
	LONG  shift 4
	IMG  shift 5
	VAR  shift 50
	MENOS  shift 8
	MAS  shift 9
	'['  shift 11
	"NOT"  shift 12
	"TRUE"  shift 13
	"FALSE"  shift 14
	'('  shift 15
	"RANGE"  shift 17
	.  error

	NEWNUMBER  goto 33
	OPESTA  goto 34
	NUMBER  goto 35
	DERANGE  goto 59
	EXPRESSION  goto 52
	RANGE  goto 53
	LIST  goto 38
	CALLSITO  goto 39
	MATRIX  goto 40
	MATRIXCALL  goto 41
	LISTCALL  goto 42
	NUMBEROP  goto 43
	FUNCTION  goto 44


state 19
	FO : "FOR" . VAR "IN" FORIMP ':' PLUSTART  (73)

	VAR  shift 60
	.  error


state 20
	WHILEE : "WHILE" . DERANGE ':' PLUSTART  (79)

	STR  shift 1
	INT  shift 2
	DEC  shift 3
	LONG  shift 4
	IMG  shift 5
	VAR  shift 50
	MENOS  shift 8
	MAS  shift 9
	'['  shift 11
	"NOT"  shift 12
	"TRUE"  shift 13
	"FALSE"  shift 14
	'('  shift 15
	"RANGE"  shift 17
	.  error

	NEWNUMBER  goto 33
	OPESTA  goto 34
	NUMBER  goto 35
	DERANGE  goto 61
	EXPRESSION  goto 52
	RANGE  goto 53
	LIST  goto 38
	CALLSITO  goto 39
	MATRIX  goto 40
	MATRIXCALL  goto 41
	LISTCALL  goto 42
	NUMBEROP  goto 43
	FUNCTION  goto 44


state 21
	PRINT : "PRINT" . '(' DERANGE CICLIKRANGE ')' END  (83)

	'('  shift 62
	.  error


state 22
	DEFF : "DEF" . FUNCTION ':' MULTISTART RETU  (86)

	VAR  shift 63
	.  error

	FUNCTION  goto 64


23: shift/reduce conflict (shift 65, reduce 16) on error
23: shift/reduce conflict (shift 1, reduce 16) on STR
23: shift/reduce conflict (shift 2, reduce 16) on INT
23: shift/reduce conflict (shift 3, reduce 16) on DEC
23: shift/reduce conflict (shift 4, reduce 16) on LONG
23: shift/reduce conflict (shift 5, reduce 16) on IMG
23: shift/reduce conflict (shift 6, reduce 16) on VAR
23: shift/reduce conflict (shift 7, reduce 16) on SALTO
23: shift/reduce conflict (shift 8, reduce 16) on MENOS
23: shift/reduce conflict (shift 9, reduce 16) on MAS
23: shift/reduce conflict (shift 10, reduce 16) on "PASS"
23: shift/reduce conflict (shift 11, reduce 16) on '['
23: shift/reduce conflict (shift 12, reduce 16) on "NOT"
23: shift/reduce conflict (shift 13, reduce 16) on "TRUE"
23: shift/reduce conflict (shift 14, reduce 16) on "FALSE"
23: shift/reduce conflict (shift 15, reduce 16) on '('
23: shift/reduce conflict (shift 16, reduce 16) on "IMPORT"
23: shift/reduce conflict (shift 17, reduce 16) on "RANGE"
23: shift/reduce conflict (shift 18, reduce 16) on "IF"
23: shift/reduce conflict (shift 19, reduce 16) on "FOR"
23: shift/reduce conflict (shift 20, reduce 16) on "WHILE"
23: shift/reduce conflict (shift 21, reduce 16) on "PRINT"
23: shift/reduce conflict (shift 22, reduce 16) on "DEF"
state 23
	$accept : START . $end  (0)
	START : START . MULTISTART  (2)
	START : START . error  (3)
	MULTISTART : .  (16)

	$end  accept
	error  shift 65
	STR  shift 1
	INT  shift 2
	DEC  shift 3
	LONG  shift 4
	IMG  shift 5
	VAR  shift 6
	SALTO  shift 7
	MENOS  shift 8
	MAS  shift 9
	"PASS"  shift 10
	'['  shift 11
	"NOT"  shift 12
	"TRUE"  shift 13
	"FALSE"  shift 14
	'('  shift 15
	"IMPORT"  shift 16
	"RANGE"  shift 17
	"IF"  shift 18
	"FOR"  shift 19
	"WHILE"  shift 20
	"PRINT"  shift 21
	"DEF"  shift 22
	$end  reduce 16

	MULTISTART  goto 66
	DECLARACION  goto 25
	IMPORT  goto 26
	DEFF  goto 27
	PRINT  goto 28
	WHILEE  goto 29
	FO  goto 30
	DERAGEX  goto 31
	IFF  goto 32
	NEWNUMBER  goto 33
	OPESTA  goto 34
	NUMBER  goto 35
	EXPRESSION  goto 36
	RANGE  goto 37
	LIST  goto 38
	CALLSITO  goto 39
	MATRIX  goto 40
	MATRIXCALL  goto 41
	LISTCALL  goto 42
	NUMBEROP  goto 43
	FUNCTION  goto 44


24: reduce/reduce conflict (reduce 1, reduce 16) on $end
24: reduce/reduce conflict (reduce 1, reduce 16) on error
24: shift/reduce conflict (shift 1, reduce 1) on STR
24: shift/reduce conflict (shift 1, reduce 16) on STR
24: shift/reduce conflict (shift 2, reduce 1) on INT
24: shift/reduce conflict (shift 2, reduce 16) on INT
24: shift/reduce conflict (shift 3, reduce 1) on DEC
24: shift/reduce conflict (shift 3, reduce 16) on DEC
24: shift/reduce conflict (shift 4, reduce 1) on LONG
24: shift/reduce conflict (shift 4, reduce 16) on LONG
24: shift/reduce conflict (shift 5, reduce 1) on IMG
24: shift/reduce conflict (shift 5, reduce 16) on IMG
24: shift/reduce conflict (shift 6, reduce 1) on VAR
24: shift/reduce conflict (shift 6, reduce 16) on VAR
24: shift/reduce conflict (shift 7, reduce 1) on SALTO
24: shift/reduce conflict (shift 7, reduce 16) on SALTO
24: shift/reduce conflict (shift 8, reduce 1) on MENOS
24: shift/reduce conflict (shift 8, reduce 16) on MENOS
24: shift/reduce conflict (shift 9, reduce 1) on MAS
24: shift/reduce conflict (shift 9, reduce 16) on MAS
24: shift/reduce conflict (shift 10, reduce 1) on "PASS"
24: shift/reduce conflict (shift 10, reduce 16) on "PASS"
24: shift/reduce conflict (shift 11, reduce 1) on '['
24: shift/reduce conflict (shift 11, reduce 16) on '['
24: shift/reduce conflict (shift 12, reduce 1) on "NOT"
24: shift/reduce conflict (shift 12, reduce 16) on "NOT"
24: shift/reduce conflict (shift 13, reduce 1) on "TRUE"
24: shift/reduce conflict (shift 13, reduce 16) on "TRUE"
24: shift/reduce conflict (shift 14, reduce 1) on "FALSE"
24: shift/reduce conflict (shift 14, reduce 16) on "FALSE"
24: shift/reduce conflict (shift 15, reduce 1) on '('
24: shift/reduce conflict (shift 15, reduce 16) on '('
24: shift/reduce conflict (shift 16, reduce 1) on "IMPORT"
24: shift/reduce conflict (shift 16, reduce 16) on "IMPORT"
24: shift/reduce conflict (shift 17, reduce 1) on "RANGE"
24: shift/reduce conflict (shift 17, reduce 16) on "RANGE"
24: shift/reduce conflict (shift 18, reduce 1) on "IF"
24: shift/reduce conflict (shift 18, reduce 16) on "IF"
24: shift/reduce conflict (shift 19, reduce 1) on "FOR"
24: shift/reduce conflict (shift 19, reduce 16) on "FOR"
24: shift/reduce conflict (shift 20, reduce 1) on "WHILE"
24: shift/reduce conflict (shift 20, reduce 16) on "WHILE"
24: shift/reduce conflict (shift 21, reduce 1) on "PRINT"
24: shift/reduce conflict (shift 21, reduce 16) on "PRINT"
24: shift/reduce conflict (shift 22, reduce 1) on "DEF"
24: shift/reduce conflict (shift 22, reduce 16) on "DEF"
state 24
	START : MULTISTART .  (1)
	MULTISTART : MULTISTART . MULTISTART  (15)
	MULTISTART : .  (16)

	STR  shift 1
	INT  shift 2
	DEC  shift 3
	LONG  shift 4
	IMG  shift 5
	VAR  shift 6
	SALTO  shift 7
	MENOS  shift 8
	MAS  shift 9
	"PASS"  shift 10
	'['  shift 11
	"NOT"  shift 12
	"TRUE"  shift 13
	"FALSE"  shift 14
	'('  shift 15
	"IMPORT"  shift 16
	"RANGE"  shift 17
	"IF"  shift 18
	"FOR"  shift 19
	"WHILE"  shift 20
	"PRINT"  shift 21
	"DEF"  shift 22
	$end  reduce 1
	error  reduce 1

	MULTISTART  goto 67
	DECLARACION  goto 25
	IMPORT  goto 26
	DEFF  goto 27
	PRINT  goto 28
	WHILEE  goto 29
	FO  goto 30
	DERAGEX  goto 31
	IFF  goto 32
	NEWNUMBER  goto 33
	OPESTA  goto 34
	NUMBER  goto 35
	EXPRESSION  goto 36
	RANGE  goto 37
	LIST  goto 38
	CALLSITO  goto 39
	MATRIX  goto 40
	MATRIXCALL  goto 41
	LISTCALL  goto 42
	NUMBEROP  goto 43
	FUNCTION  goto 44


state 25
	MULTISTART : DECLARACION .  (6)

	.  reduce 6


state 26
	MULTISTART : IMPORT .  (7)

	.  reduce 7


state 27
	MULTISTART : DEFF .  (8)

	.  reduce 8


state 28
	MULTISTART : PRINT .  (9)

	.  reduce 9


state 29
	MULTISTART : WHILEE .  (10)

	.  reduce 10


state 30
	MULTISTART : FO .  (11)

	.  reduce 11


state 31
	MULTISTART : DERAGEX .  (12)

	.  reduce 12


state 32
	MULTISTART : IFF .  (13)

	.  reduce 13


state 33
	NUMBEROP : NEWNUMBER .  (48)

	.  reduce 48


state 34
	NEWNUMBER : OPESTA . NUMBER  (17)

	INT  shift 2
	DEC  shift 3
	LONG  shift 4
	IMG  shift 5
	.  error

	NUMBER  goto 68


state 35
	NEWNUMBER : NUMBER .  (18)

	.  reduce 18


state 36
	DERAGEX : EXPRESSION . END  (30)
	END : .  (90)

	';'  shift 69
	$end  reduce 90
	error  reduce 90
	STR  reduce 90
	INT  reduce 90
	DEC  reduce 90
	LONG  reduce 90
	IMG  reduce 90
	VAR  reduce 90
	SALTO  reduce 90
	MENOS  reduce 90
	MAS  reduce 90
	"PASS"  reduce 90
	'['  reduce 90
	"NOT"  reduce 90
	"TRUE"  reduce 90
	"FALSE"  reduce 90
	'('  reduce 90
	"IMPORT"  reduce 90
	"RANGE"  reduce 90
	"IF"  reduce 90
	"ELIF"  reduce 90
	"ELSE"  reduce 90
	"FOR"  reduce 90
	"WHILE"  reduce 90
	"PRINT"  reduce 90
	"DEF"  reduce 90
	"RETURN"  reduce 90

	END  goto 70


state 37
	DERAGEX : RANGE . END  (31)
	END : .  (90)

	';'  shift 69
	$end  reduce 90
	error  reduce 90
	STR  reduce 90
	INT  reduce 90
	DEC  reduce 90
	LONG  reduce 90
	IMG  reduce 90
	VAR  reduce 90
	SALTO  reduce 90
	MENOS  reduce 90
	MAS  reduce 90
	"PASS"  reduce 90
	'['  reduce 90
	"NOT"  reduce 90
	"TRUE"  reduce 90
	"FALSE"  reduce 90
	'('  reduce 90
	"IMPORT"  reduce 90
	"RANGE"  reduce 90
	"IF"  reduce 90
	"ELIF"  reduce 90
	"ELSE"  reduce 90
	"FOR"  reduce 90
	"WHILE"  reduce 90
	"PRINT"  reduce 90
	"DEF"  reduce 90
	"RETURN"  reduce 90

	END  goto 71


38: shift/reduce conflict (shift 11, reduce 33) on '['
state 38
	EXPRESSION : LIST .  (33)
	MATRIX : LIST . LIST  (45)

	'['  shift 11
	$end  reduce 33
	error  reduce 33
	STR  reduce 33
	INT  reduce 33
	DEC  reduce 33
	LONG  reduce 33
	IMG  reduce 33
	VAR  reduce 33
	SALTO  reduce 33
	MENOS  reduce 33
	MAS  reduce 33
	"PASS"  reduce 33
	','  reduce 33
	']'  reduce 33
	"NOT"  reduce 33
	"TRUE"  reduce 33
	"FALSE"  reduce 33
	'('  reduce 33
	')'  reduce 33
	"IMPORT"  reduce 33
	"RANGE"  reduce 33
	"IF"  reduce 33
	':'  reduce 33
	"ELIF"  reduce 33
	"ELSE"  reduce 33
	"FOR"  reduce 33
	"WHILE"  reduce 33
	"PRINT"  reduce 33
	"DEF"  reduce 33
	"RETURN"  reduce 33
	';'  reduce 33

	LIST  goto 72


state 39
	EXPRESSION : CALLSITO .  (34)

	.  reduce 34


state 40
	EXPRESSION : MATRIX .  (35)

	.  reduce 35


state 41
	EXPRESSION : MATRIXCALL .  (36)

	.  reduce 36


state 42
	CALLSITO : LISTCALL .  (39)

	.  reduce 39


43: shift/reduce conflict (shift 8, reduce 38) on MENOS
43: shift/reduce conflict (shift 9, reduce 38) on MAS
state 43
	CALLSITO : NUMBEROP .  (38)
	NUMBEROP : NUMBEROP . OPERATION NUMBEROP  (46)

	OPAL  shift 73
	COMP  shift 74
	MULT  shift 75
	MENOS  shift 8
	MAS  shift 9
	"IS"  shift 76
	"AND"  shift 77
	"OR"  shift 78
	$end  reduce 38
	error  reduce 38
	STR  reduce 38
	INT  reduce 38
	DEC  reduce 38
	LONG  reduce 38
	IMG  reduce 38
	VAR  reduce 38
	SALTO  reduce 38
	"PASS"  reduce 38
	','  reduce 38
	'['  reduce 38
	']'  reduce 38
	"NOT"  reduce 38
	"TRUE"  reduce 38
	"FALSE"  reduce 38
	'('  reduce 38
	')'  reduce 38
	"IMPORT"  reduce 38
	"RANGE"  reduce 38
	"IF"  reduce 38
	':'  reduce 38
	"ELIF"  reduce 38
	"ELSE"  reduce 38
	"FOR"  reduce 38
	"WHILE"  reduce 38
	"PRINT"  reduce 38
	"DEF"  reduce 38
	"RETURN"  reduce 38
	';'  reduce 38

	OPESTA  goto 79
	OPERATION  goto 80
	OPBOL  goto 81


state 44
	CALLSITO : FUNCTION .  (40)

	.  reduce 40


state 45
	DECLA : OPASS .  (27)

	.  reduce 27


state 46
	DECLA : ',' . VAR DECLA DERANGE ','  (26)

	VAR  shift 82
	.  error


state 47
	LISTCALL : VAR '[' . CALLSITO ']'  (37)
	MATRIXCALL : VAR '[' . CALLSITO ']' '[' CALLSITO ']'  (41)

	INT  shift 2
	DEC  shift 3
	LONG  shift 4
	IMG  shift 5
	VAR  shift 83
	MENOS  shift 8
	MAS  shift 9
	"NOT"  shift 12
	"TRUE"  shift 13
	"FALSE"  shift 14
	'('  shift 15
	.  error

	NEWNUMBER  goto 33
	OPESTA  goto 34
	NUMBER  goto 35
	CALLSITO  goto 84
	LISTCALL  goto 42
	NUMBEROP  goto 43
	FUNCTION  goto 44


state 48
	FUNCTION : VAR '(' . DERANGE FU ')'  (61)

	STR  shift 1
	INT  shift 2
	DEC  shift 3
	LONG  shift 4
	IMG  shift 5
	VAR  shift 50
	MENOS  shift 8
	MAS  shift 9
	'['  shift 11
	"NOT"  shift 12
	"TRUE"  shift 13
	"FALSE"  shift 14
	'('  shift 15
	"RANGE"  shift 17
	.  error

	NEWNUMBER  goto 33
	OPESTA  goto 34
	NUMBER  goto 35
	DERANGE  goto 85
	EXPRESSION  goto 52
	RANGE  goto 53
	LIST  goto 38
	CALLSITO  goto 39
	MATRIX  goto 40
	MATRIXCALL  goto 41
	LISTCALL  goto 42
	NUMBEROP  goto 43
	FUNCTION  goto 44


state 49
	DECLARACION : VAR DECLA . DERANGE END  (25)

	STR  shift 1
	INT  shift 2
	DEC  shift 3
	LONG  shift 4
	IMG  shift 5
	VAR  shift 50
	MENOS  shift 8
	MAS  shift 9
	'['  shift 11
	"NOT"  shift 12
	"TRUE"  shift 13
	"FALSE"  shift 14
	'('  shift 15
	"RANGE"  shift 17
	.  error

	NEWNUMBER  goto 33
	OPESTA  goto 34
	NUMBER  goto 35
	DERANGE  goto 86
	EXPRESSION  goto 52
	RANGE  goto 53
	LIST  goto 38
	CALLSITO  goto 39
	MATRIX  goto 40
	MATRIXCALL  goto 41
	LISTCALL  goto 42
	NUMBEROP  goto 43
	FUNCTION  goto 44


50: shift/reduce conflict (shift 47, reduce 49) on '['
50: shift/reduce conflict (shift 48, reduce 49) on '('
state 50
	LISTCALL : VAR . '[' CALLSITO ']'  (37)
	MATRIXCALL : VAR . '[' CALLSITO ']' '[' CALLSITO ']'  (41)
	NUMBEROP : VAR .  (49)
	FUNCTION : VAR . '(' DERANGE FU ')'  (61)

	'['  shift 47
	'('  shift 48
	$end  reduce 49
	error  reduce 49
	OPAL  reduce 49
	COMP  reduce 49
	STR  reduce 49
	INT  reduce 49
	DEC  reduce 49
	LONG  reduce 49
	IMG  reduce 49
	VAR  reduce 49
	SALTO  reduce 49
	MULT  reduce 49
	MENOS  reduce 49
	MAS  reduce 49
	"PASS"  reduce 49
	','  reduce 49
	']'  reduce 49
	"NOT"  reduce 49
	"TRUE"  reduce 49
	"FALSE"  reduce 49
	')'  reduce 49
	"IS"  reduce 49
	"AND"  reduce 49
	"OR"  reduce 49
	"IMPORT"  reduce 49
	"RANGE"  reduce 49
	"IF"  reduce 49
	':'  reduce 49
	"ELIF"  reduce 49
	"ELSE"  reduce 49
	"FOR"  reduce 49
	"WHILE"  reduce 49
	"PRINT"  reduce 49
	"DEF"  reduce 49
	"RETURN"  reduce 49
	';'  reduce 49


state 51
	LIST : '[' DERANGE . LI ']'  (42)
	LI : .  (44)

	','  shift 87
	']'  reduce 44

	LI  goto 88


state 52
	DERANGE : EXPRESSION .  (28)

	.  reduce 28


state 53
	DERANGE : RANGE .  (29)

	.  reduce 29


state 54
	NUMBEROP : VAR .  (49)

	.  reduce 49


55: shift/reduce conflict (shift 73, reduce 47) on OPAL
55: shift/reduce conflict (shift 74, reduce 47) on COMP
55: shift/reduce conflict (shift 75, reduce 47) on MULT
55: shift/reduce conflict (shift 8, reduce 47) on MENOS
55: shift/reduce conflict (shift 9, reduce 47) on MAS
55: shift/reduce conflict (shift 76, reduce 47) on "IS"
55: shift/reduce conflict (shift 77, reduce 47) on "AND"
55: shift/reduce conflict (shift 78, reduce 47) on "OR"
state 55
	NUMBEROP : NUMBEROP . OPERATION NUMBEROP  (46)
	NUMBEROP : "NOT" NUMBEROP .  (47)

	OPAL  shift 73
	COMP  shift 74
	MULT  shift 75
	MENOS  shift 8
	MAS  shift 9
	"IS"  shift 76
	"AND"  shift 77
	"OR"  shift 78
	$end  reduce 47
	error  reduce 47
	STR  reduce 47
	INT  reduce 47
	DEC  reduce 47
	LONG  reduce 47
	IMG  reduce 47
	VAR  reduce 47
	SALTO  reduce 47
	"PASS"  reduce 47
	','  reduce 47
	'['  reduce 47
	']'  reduce 47
	"NOT"  reduce 47
	"TRUE"  reduce 47
	"FALSE"  reduce 47
	'('  reduce 47
	')'  reduce 47
	"IMPORT"  reduce 47
	"RANGE"  reduce 47
	"IF"  reduce 47
	':'  reduce 47
	"ELIF"  reduce 47
	"ELSE"  reduce 47
	"FOR"  reduce 47
	"WHILE"  reduce 47
	"PRINT"  reduce 47
	"DEF"  reduce 47
	"RETURN"  reduce 47
	';'  reduce 47

	OPESTA  goto 79
	OPERATION  goto 80
	OPBOL  goto 81


state 56
	NUMBEROP : NUMBEROP . OPERATION NUMBEROP  (46)
	NUMBEROP : '(' NUMBEROP . ')'  (52)

	OPAL  shift 73
	COMP  shift 74
	MULT  shift 75
	MENOS  shift 8
	MAS  shift 9
	')'  shift 89
	"IS"  shift 76
	"AND"  shift 77
	"OR"  shift 78
	.  error

	OPESTA  goto 79
	OPERATION  goto 80
	OPBOL  goto 81


state 57
	IMPORT : "IMPORT" VAR . END  (64)
	END : .  (90)

	';'  shift 69
	$end  reduce 90
	error  reduce 90
	STR  reduce 90
	INT  reduce 90
	DEC  reduce 90
	LONG  reduce 90
	IMG  reduce 90
	VAR  reduce 90
	SALTO  reduce 90
	MENOS  reduce 90
	MAS  reduce 90
	"PASS"  reduce 90
	'['  reduce 90
	"NOT"  reduce 90
	"TRUE"  reduce 90
	"FALSE"  reduce 90
	'('  reduce 90
	"IMPORT"  reduce 90
	"RANGE"  reduce 90
	"IF"  reduce 90
	"ELIF"  reduce 90
	"ELSE"  reduce 90
	"FOR"  reduce 90
	"WHILE"  reduce 90
	"PRINT"  reduce 90
	"DEF"  reduce 90
	"RETURN"  reduce 90

	END  goto 90


state 58
	RANGE : "RANGE" '(' . RANG ')'  (65)
